--- a/discretion_mapping_2.Rmd
+++ b/discretion_mapping_2.Rmd
@@ -140,36 +140,70 @@ library(xaringan)
 .center[![](img/communication.gif)]
 
 ---
-### Methods: Communication Tools
-* A detailed communication plan, including:
-  * Technology:
-      * [Slack](https://slack.com)
-         * For meetings and records
-      * [Amazon Web Services](https://aws.amazon.com/rds/postgresql/)
-          * Our open, anonymous database
-      * [Github/Github pages](https://github.com)
-         * Our webpage and code storage
-    * [Newsletters](https://mailchimp.com) 
-        * Emailing our updates monthly
-  * Data Walks
-     * Showing what we have done
-  * Regular meetings
-    * [Agile](https://martinfowler.com/articles/itsNotJustStandingUp.html) informed
-      * Open 
-      * Document what we have done and how we have done it
+### Methods: Communication Plan
+Meeting Structure
+
+  * [Agile](https://martinfowler.com/articles/itsNotJustStandingUp.html) informed
+      * Stand ups to fill each other in
+      * Break outs to solve difficult tasks
       
+  * Open
+  
+  * Document what we have done and how we have done it
+
+---
+### Methods: Communication Plan
+Technology:
+* [Slack](https://slack.com)
+   * For meetings and records
+   
+* [Amazon Web Services](https://aws.amazon.com/rds/postgresql/)
+  * Our open, anonymous database
+
+* [Github/Github pages](https://github.com)
+   * Our webpage and code storage
+
+* [Newsletters](https://mailchimp.com)
+    * Emailing our updates monthly
+---
+### Methods: Communication Plan
+Events:
+
+* Data Walks
+    * Showing what we have done
+
+* Division/Section Meetings
+  * Providing and soliciting feedback on progress
+
+      
+---
+### Methods: Database Discussion
+
+* Currently, the department stores, transforms, and shares data in Spreadsheets
+
+* By using a database, we can:
+  * Have a more secure solution
+  * Work the data without fear of losing the data
+  * Make our data available so others can reproduce our work
+
+* Our current data practices prevent the development of insight and actionable steps
+
+* Using a database will force the department to evolve in a more equitable direction
+
 ---
 ### Delivereables and Timeline
 
-.center[![:scale 35%](img/timeframe.gif)]
---
+.center[![:scale 25%](img/timeframe.gif)]
 
 * First deliverables
   * Communication plan
   * Work breakdown
      * An estimate length of each collection/analysis phase
-* Major deliverables every 3 months thereafter
+  * Submitted within 3 months of CORE's approval of this plan
+  * Major deliverables every 3 months thereafter
+
 * Monthly newsletter
+
 * Bi-Weekly Check in meetings
 
 ---
@@ -181,7 +215,7 @@ library(xaringan)
 .center[![](img/team_awesome.gif)]
 
 ---
-# Additional Reading/Videos
+# Additional Resources
 
 * [Amazon Web Services](https://aws.amazon.com/free/?sc_channel=PS&sc_campaign=acquisition_US&sc_publisher=google&sc_medium=ACQ-P%7CPS-GO%7CBrand%7CDesktop%7CSU%7CCore%7CCore%7CUS%7CEN%7CText&sc_content=Brand_Core_bmm&sc_detail=%2Bamazon.%20%2Bweb%20%2Bservices&sc_category=Core&sc_segment=293614486518&sc_matchtype=b&sc_country=US&s_kwcid=AL!4422!3!293614486518!b!!g!!%2Bamazon.%20%2Bweb%20%2Bservices&ef_id=Cj0KCQjwpsLkBRDpARIsAKoYI8zTIwZYQShraMo1AcqMmNTu8W-HtylKiQwEpzrYvxjFnLBrPt25-CQaAo0pEALw_wcB:G:s)
 
@@ -191,6 +225,6 @@ library(xaringan)
 
 * [Git hub](https://www.youtube.com/watch?v=w3jLJU7DT5E)
 
-* [Website based Deliverable] goal(https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/sexualoffendingvictimisationandthepaththroughthecriminaljusticesystem/2018-12-13)
+* [Website Example/Goal](https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/sexualoffendingvictimisationandthepaththroughthecriminaljusticesystem/2018-12-13)
 
 
