edits to one pager.

--- a/rmd/exec_summary.Rmd
+++ b/rmd/exec_summary.Rmd
@@ -18,7 +18,7 @@ From February 2017 to March 2018, members of the Committee on Results for Equity
 It is important to note that the team did not determine whether or not officer discretion is positive or negative. The scope of this project was limited to mapping where discretion exists within the continuum of care, how discretion is guided, and if there is any data or evidence that may help show impact of discretion. 
 
 # Definition
-The first task the team addressed was our definition of discretion. The team quickly settled on the following: Discretion refers to the choices made by the officer when implementing a policy, practice, or referring to a program. Using this definition, the team was able to fully to examine the probation process by building a model of the continuum of care. The team took the attached Cook County Juvenile Probation Flowchart of General Operations and divided it into three sections: Pre-Trial, Trial, and Service. This model is not perfect, nor was it intended to be. The model was created to allow the team to map discretion points, collect information, and note areas for further study. This process allowed for the team to look at officer discretion from a variety of perspectives while still keeping the entire probation system in mind.
+The first task the team addressed was our definition of discretion. The team quickly settled on the following: Discretion refers to the choices made by the officer when implementing a policy, practice, or referring to a program. Using this definition, the team was able to fully examine the probation process by building a model of the continuum of care. The team took the attached Cook County Juvenile Probation Flowchart of General Operations and divided it into three sections: Pre-Trial, Trial, and Service. This model is not perfect, nor was it intended to be. The model was created to allow the team to map discretion points, collect information, and note areas for further study. This process allowed for the team to look at officer discretion from a variety of perspectives while still keeping the entire probation system in mind.
 
 # Method
 To spur discussions and generate questions, the team imagined a young person going through our model and asking questions on what they would encounter through each section or court practice. With these baseline questions, members of the team interviewed a variety of staff to discuss “text book” methods of conducting division business as well as current and best practices. 
@@ -27,7 +27,7 @@ To spur discussions and generate questions, the team imagined a young person goi
 
 All told, there were approximately 45 discretion points mapped in the continuum of care. The number of discretion points is an estimate due to the differences in counting discretion points: For example, the way in which interviews for assessments (socials, supplemental socials, case plans, sanctions, etc.) can be counted as four discretion points or as one discretion point that exists across the spectrum of programming. The findings were clear: Discretion points exist from detention screening to case termination, and every division in between.
 
-Of particular note: even “objective” measures allow for discretion. In detention screening, officers can override the range of 8-14 rely on officer’s discretion. The YASI manual requires discretion. While the officer is given guidelines on how to score each item, answers depend on officers’ judgement when scoring these items. Since even the tools officers use in providing and documenting care have discretion points, our model allowed the team to map where points exist and gave guidance on how to proceed between each division and department within the court.
+Of particular note: Even “objective” measures allow for discretion. An example can be found in the in detention screening process. Per policy, officers are required to use their discretion when dealing with a score from 8 to 14. Another example is in the previous risk assessment tool, the YASI. While the officer is given guidelines on how to score each item, answers depend on officers’ judgement when scoring these items. Time will tell if the new tool, the JRA, will have a similar impact on discretion points. Since even the tools officers use in providing and documenting care have discretion points, our model allowed the team to map where points exist and gave guidance on how to proceed between each division and department within the court.
 
 # Conclusion
-The team is still delving into the findings. We are cleaning up our notes and looking to have them presentable to the department early in 2018. The work does not stop there. The discretion mapping team will look into specific sections of the flowchart for more detailed mapping of particular discretion as well as collecting data on how said discretion impacts young people. 
+The purpose of this project was to map where discretion exists. To this end, the project has been successful. A high-level view of the discretion points in the probation process has been developed, and can be used to provide insight into how best to inform officer discretion. But the work continues: Phase 2 of this project will focus on the polices, procedures, and protocols of case management. This phase will deliver a more detailed map and methods to analyze the impact that officer's discretion has on client outcomes.
